adding function and modify pkg description
1. Adding New Function: selectCases
2. remove icd pkg import: groupIcdToComorbid
3. modify description authors

--- a/vignettes/emr.Rmd
+++ b/vignettes/emr.Rmd
@@ -77,6 +77,6 @@ Get the PheWAS Phecode or description of ICD-9 diagnosis codes
 ```
 ## Examples
 ```
-groupIcdBasedOnComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", ahrq, N, TRUE)
+groupIcdToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", ahrq, N, TRUE)
 ```
 
